@angular/cli migration - update-module-and-target-compiler-options
Update 'module' and 'target' TypeScript compiler options. Read more about this here: https://v10.angular.io/guide/migration-update-module-and-target-compiler-options

Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
 		],
 		"sourceMap": true,
 		"inlineSources": true,
-		"module": "esnext",
+		"module": "es2020",
 		"moduleResolution": "node",
 		"outDir": "./dist-pkg",
 		"rootDir": ".",
