@angular/cli migration - replace-ng-packagr-builder
Replace deprecated library builder '@angular-devkit/build-ng-packagr'.

Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
       "prefix": "ibm",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "./src/tsconfig.lib.json",
             "project": "./src/ng-package.json"
