--- a/package.json
+++ b/package.json
@@ -92,11 +92,11 @@
     "@storybook/addons": "5.3.19",
     "@storybook/angular": "5.3.19",
     "@storybook/theming": "5.3.19",
-    "@types/jasmine": "2.8.2",
+    "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "babel-loader": "8.0.5",
     "chai": "4.2.0",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "commitizen": "4.2.4",
     "core-js": "2.6.11",
     "cz-conventional-changelog-components": "1.0.0",
@@ -107,7 +107,7 @@
     "gulp-concat": "2.6.1",
     "gulp-tap": "1.0.1",
     "husky": "1.3.1",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
