--- a/package.json
+++ b/package.json
@@ -67,17 +67,17 @@
     "@carbon/styles": "^1.4.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.19",
-    "@angular-devkit/core": "11.2.19",
-    "@angular/cli": "11.2.19",
-    "@angular/common": "11.2.14",
-    "@angular/compiler": "11.2.14",
-    "@angular/compiler-cli": "11.2.14",
-    "@angular/core": "11.2.14",
-    "@angular/forms": "11.2.14",
-    "@angular/platform-browser": "11.2.14",
-    "@angular/platform-browser-dynamic": "11.2.14",
-    "@angular/router": "11.2.14",
+    "@angular-devkit/build-angular": "~12.2.17",
+    "@angular-devkit/core": "12.2.17",
+    "@angular/cli": "12.2.17",
+    "@angular/common": "12.2.16",
+    "@angular/compiler": "12.2.16",
+    "@angular/compiler-cli": "12.2.16",
+    "@angular/core": "12.2.16",
+    "@angular/forms": "12.2.16",
+    "@angular/platform-browser": "12.2.16",
+    "@angular/platform-browser-dynamic": "12.2.16",
+    "@angular/router": "12.2.16",
     "@babel/core": "7.4.3",
     "@carbon/styles": "1.4.0",
     "@carbon/themes": "11.0.1",
@@ -114,9 +114,9 @@
     "karma-cli": "2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "1.7.0",
     "lodash-es": "4.17.21",
-    "ng-packagr": "^11.2.4",
+    "ng-packagr": "^12.2.7",
     "rxjs": "6.6.7",
     "sass": "1.49.9",
     "sass-loader": "10.1.1",
@@ -125,9 +125,9 @@
     "tslint": "~6.1.0",
     "typedoc": "0.14.2",
     "typedoc-plugin-external-module-name": "^4.0.3",
-    "typescript": "4.0.8",
+    "typescript": "4.3.5",
     "whatwg-fetch": "3.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.6"
   },
   "dependencies": {
     "@carbon/icon-helpers": "10.30.0",
