--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@carbon/styles": "^1.4.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.17",
+    "@angular-devkit/build-angular": "12.2.17",
     "@angular-devkit/core": "12.2.17",
     "@angular/cli": "12.2.17",
     "@angular/common": "12.2.16",
@@ -83,20 +83,19 @@
     "@carbon/themes": "11.0.1",
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
-    "@storybook/addon-actions": "5.3.19",
-    "@storybook/addon-knobs": "5.3.19",
-    "@storybook/addon-links": "5.3.19",
-    "@storybook/addon-notes": "5.3.19",
-    "@storybook/addon-options": "5.3.19",
-    "@storybook/addon-storysource": "5.3.19",
-    "@storybook/addons": "5.3.19",
-    "@storybook/angular": "5.3.19",
-    "@storybook/theming": "5.3.19",
-    "@types/jasmine": "~3.6.0",
+    "@storybook/addon-actions": "6.4.14",
+    "@storybook/addon-essentials": "6.4.14",
+    "@storybook/addon-links": "6.4.14",
+    "@storybook/angular": "6.4.14",
+    "@storybook/builder-webpack5": "6.4.14",
+    "@storybook/manager-webpack5": "6.4.14",
+    "@storybook/source-loader": "6.4.14",
+    "@storybook/theming": "6.4.14",
+    "@types/jasmine": "3.6.0",
     "@types/node": "^12.11.1",
     "babel-loader": "8.0.5",
     "chai": "4.2.0",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "6.0.0",
     "commitizen": "4.2.4",
     "core-js": "2.6.11",
     "cz-conventional-changelog-components": "1.0.0",
@@ -107,27 +106,27 @@
     "gulp-concat": "2.6.1",
     "gulp-tap": "1.0.1",
     "husky": "1.3.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "5.0.0",
+    "karma": "6.4.0",
+    "karma-chrome-launcher": "3.1.0",
     "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
+    "karma-coverage-istanbul-reporter": "3.0.2",
+    "karma-jasmine": "4.0.0",
     "karma-jasmine-html-reporter": "1.7.0",
     "lodash-es": "4.17.21",
-    "ng-packagr": "^12.2.7",
+    "ng-packagr": "12.2.7",
     "rxjs": "6.6.7",
     "sass": "1.49.9",
     "sass-loader": "10.1.1",
     "semantic-release": "17.2.3",
     "ts-helpers": "1.1.2",
-    "tslint": "~6.1.0",
+    "tslint": "6.1.0",
     "typedoc": "0.14.2",
-    "typedoc-plugin-external-module-name": "^4.0.3",
+    "typedoc-plugin-external-module-name": "4.0.6",
     "typescript": "4.3.5",
     "whatwg-fetch": "3.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.4"
   },
   "dependencies": {
     "@carbon/icon-helpers": "10.30.0",
