--- a/angular.json
+++ b/angular.json
@@ -1,85 +1,96 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
-  "newProjectRoot": "projects",
-  "projects": {
-    "carbon-components-angular": {
-      "root": "src",
-      "sourceRoot": "src",
-      "projectType": "library",
-      "prefix": "ibm",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:ng-packagr",
-          "options": {
-            "tsConfig": "./src/tsconfig.lib.json",
-            "project": "./src/ng-package.json"
-          },
-          "configurations": {
-            "production": {
-              "tsConfig": "./src/tsconfig.lib.json"
-            }
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "src/test.ts",
-            "karmaConfig": "./karma.conf.js",
-            "tsConfig": "./tsconfig.spec.json"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "./tsconfig.json",
-              "./tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
-    },
-    "carbon-components-angular-e2e": {
-      "root": "e2e",
-      "sourceRoot": "e2e",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "carbon-components-angular:serve"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "e2e/tsconfig.e2e.json"
-            ],
-            "exclude": [
-              "**/node_modules/**/*"
-            ]
-          }
-        }
-      }
-    }
-  },
-  "defaultProject": "carbon-components-angular",
-  "schematics": {
-    "@schematics/angular:component": {
-      "prefix": "ibm",
-      "style": "css"
-    },
-    "@schematics/angular:directive": {
-      "prefix": "ibm"
-    }
-  },
-  "cli": {
-    "analytics": "738e9b32-8ce4-448f-b650-921e5656f770"
-  }
+	"$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+	"version": 1,
+	"newProjectRoot": "projects",
+	"projects": {
+		"carbon-components-angular": {
+			"root": "src",
+			"sourceRoot": "src",
+			"projectType": "library",
+			"prefix": "ibm",
+			"architect": {
+				"build": {
+					"builder": "@angular-devkit/build-angular:ng-packagr",
+					"options": {
+						"tsConfig": "./src/tsconfig.lib.json",
+						"project": "./src/ng-package.json"
+					},
+					"configurations": {
+						"production": {
+							"tsConfig": "./src/tsconfig.lib.json"
+						}
+					}
+				},
+				"test": {
+					"builder": "@angular-devkit/build-angular:karma",
+					"options": {
+						"main": "src/test.ts",
+						"karmaConfig": "./karma.conf.js",
+						"tsConfig": "./tsconfig.spec.json"
+					}
+				},
+				"lint": {
+					"builder": "@angular-devkit/build-angular:tslint",
+					"options": {
+						"tsConfig": [
+							"./tsconfig.json",
+							"./tsconfig.spec.json"
+						],
+						"exclude": [
+							"**/node_modules/**"
+						]
+					}
+				},
+				"storybook": {
+					"builder": "@storybook/angular:start-storybook",
+					"options": {
+						"browserTarget": "carbon-components-angular:build",
+						"port": 6006,
+						"styles": [
+							"./.storybook/preview.scss"
+						],
+						"compodoc": false
+					}
+				}
+			}
+		},
+		"carbon-components-angular-e2e": {
+			"root": "e2e",
+			"sourceRoot": "e2e",
+			"projectType": "application",
+			"architect": {
+				"e2e": {
+					"builder": "@angular-devkit/build-angular:protractor",
+					"options": {
+						"protractorConfig": "./protractor.conf.js",
+						"devServerTarget": "carbon-components-angular:serve"
+					}
+				},
+				"lint": {
+					"builder": "@angular-devkit/build-angular:tslint",
+					"options": {
+						"tsConfig": [
+							"e2e/tsconfig.e2e.json"
+						],
+						"exclude": [
+							"**/node_modules/**/*"
+						]
+					}
+				}
+			}
+		}
+	},
+	"defaultProject": "carbon-components-angular",
+	"schematics": {
+		"@schematics/angular:component": {
+			"prefix": "ibm",
+			"style": "css"
+		},
+		"@schematics/angular:directive": {
+			"prefix": "ibm"
+		}
+	},
+	"cli": {
+		"analytics": "738e9b32-8ce4-448f-b650-921e5656f770"
+	}
 }
