--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "@angular/platform-browser-dynamic": "12.2.16",
     "@angular/router": "12.2.16",
     "@babel/core": "7.4.3",
-    "@carbon/styles": "1.4.0",
+    "@carbon/styles": "1.6.0",
     "@carbon/themes": "11.0.1",
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
@@ -92,7 +92,7 @@
     "@storybook/source-loader": "6.4.14",
     "@storybook/theming": "6.4.14",
     "@types/jasmine": "3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "12.20.55",
     "babel-loader": "8.0.5",
     "chai": "4.2.0",
     "codelyzer": "6.0.0",
