--- a/package.json
+++ b/package.json
@@ -116,9 +116,11 @@
     "karma-jasmine-html-reporter": "1.7.0",
     "lodash-es": "4.17.21",
     "ng-packagr": "12.2.7",
+    "postcss": "8.4.14",
+    "postcss-loader": "7.0.0",
     "rxjs": "6.6.7",
     "sass": "1.49.9",
-    "sass-loader": "10.1.1",
+    "sass-loader": "12.1.0",
     "semantic-release": "17.2.3",
     "ts-helpers": "1.1.2",
     "tslint": "6.1.0",
