--- a/package.json
+++ b/package.json
@@ -64,7 +64,12 @@
   "license": "Apache-2.0",
   "author": "IBM",
   "peerDependencies": {
-    "@carbon/styles": "^1.4.0"
+    "@angular/common": "^12.0.0 || ^13.0.0 || ^14.0.0",
+    "@angular/core": "^12.0.0 || ^13.0.0 || ^14.0.0",
+    "@angular/forms": "^12.0.0 || ^13.0.0 || ^14.0.0",
+    "rxjs": "^6.0.0 || ^7.0.0",
+    "zone.js": "^0.11.0",
+    "@carbon/styles": "^1.5.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "12.2.17",
