Remove tophat from tslib package
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/src/package.json
+++ b/src/package.json
@@ -21,6 +21,6 @@
     "@carbon/telemetry": "0.1.0",
     "@carbon/utils-position": "1.1.4",
     "flatpickr": "4.6.1",
-    "tslib": "^2.0.0"
+    "tslib": "2.3.0"
   }
 }
