--- a/package.json
+++ b/package.json
@@ -141,6 +141,6 @@
     "@carbon/telemetry": "0.1.0",
     "@carbon/utils-position": "1.1.4",
     "flatpickr": "4.6.13",
-    "tslib": "^2.0.0"
+    "tslib": "2.3.0"
   }
 }
