--- a/package.json
+++ b/package.json
@@ -15,13 +15,8 @@
     "semantic-release": "semantic-release",
     "commit": "git-cz",
     "ng": "ng",
-    "ng:build": "node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng build"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "bash scripts/prepush.sh",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
+    "ng:build": "node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng build",
+    "prepare": "husky install"
   },
   "release": {
     "pkgRoot": "dist",
@@ -110,7 +105,7 @@
     "gulp": "4.0.0",
     "gulp-concat": "2.6.1",
     "gulp-tap": "1.0.1",
-    "husky": "1.3.1",
+    "husky": "8.0.1",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "5.0.0",
     "karma": "6.4.0",
