Remove dry run & update tag format
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
         "range": "4.x"
       }
     ],
-    "tagFormat": "v${version}",
-	"dryRun": true
+    "tagFormat": "v${version}@next"
   },
   "config": {
     "commitizen": {
