--- a/src/carbon.yml
+++ b/src/carbon.yml
@@ -1,7 +1,7 @@
 # yaml-language-server: $schema=https://unpkg.com/@carbon-platform/schemas@v1/carbon-resources.schema.json
 library:
   id: carbon-components-angular
-  name: Carbon Components Angular
+  name: Carbon Angular
   description: Angular implementation of Carbon Components.
   externalDocsUrl: https://angular.carbondesignsystem.com
   inherits: carbon-styles
