--- a/package.json
+++ b/package.json
@@ -83,14 +83,16 @@
     "@carbon/themes": "11.0.1",
     "@commitlint/cli": "17.0.3",
     "@commitlint/config-conventional": "17.0.3",
-    "@storybook/addon-actions": "6.5.9",
-    "@storybook/addon-essentials": "6.5.9",
-    "@storybook/addon-links": "6.5.9",
-    "@storybook/angular": "6.5.9",
-    "@storybook/builder-webpack5": "6.5.9",
-    "@storybook/manager-webpack5": "6.5.9",
-    "@storybook/source-loader": "6.5.9",
-    "@storybook/theming": "6.5.9",
+    "@storybook/addon-a11y": "6.5.10",
+    "@storybook/addon-actions": "6.5.10",
+    "@storybook/addon-essentials": "6.5.10",
+    "@storybook/addon-links": "6.5.10",
+    "@storybook/addon-storysource": "6.5.10",
+    "@storybook/angular": "6.5.10",
+    "@storybook/builder-webpack5": "6.5.10",
+    "@storybook/manager-webpack5": "6.5.10",
+    "@storybook/source-loader": "6.5.10",
+    "@storybook/theming": "6.5.10",
     "@types/jasmine": "3.6.0",
     "@types/node": "12.20.55",
     "babel-loader": "8.0.5",
