--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,9 @@
 						"styles": [
 							"./.storybook/preview.scss"
 						],
-						"compodoc": false
+						"compodoc": true,
+						"compodocArgs": ["-e", "json", "--disablePrivate", "--disableProtected", "--disableLifeCycleHooks", "--disableInternal"],
+						"configDir": ".storybook"
 					}
 				},
 				"build-storybook": {
@@ -59,7 +61,7 @@
 						"styles": [
 							"./.storybook/preview.scss"
 						],
-						"compodoc": false,
+						"compodoc": true,
 						"configDir": ".storybook",
 						"outputDir": "dist/docs/storybook"
 					}
