docs: add links to remote repo in component stories
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/angular.json
+++ b/angular.json
@@ -50,7 +50,14 @@
 							"./.storybook/preview.scss"
 						],
 						"compodoc": true,
-						"compodocArgs": ["-e", "json", "--disablePrivate", "--disableProtected", "--disableLifeCycleHooks", "--disableInternal"],
+						"compodocArgs": [
+							"-e",
+							"json",
+							"--disablePrivate",
+							"--disableProtected",
+							"--disableLifeCycleHooks",
+							"--disableInternal"
+						],
 						"configDir": ".storybook"
 					}
 				},
