--- a/angular.json
+++ b/angular.json
@@ -79,7 +79,8 @@
 							"--disableLifeCycleHooks",
 							"--disableInternal",
 							"-d",
-							"dist/docs/"
+							"dist/docs/",
+							"-t"
 						],
 						"configDir": ".storybook",
 						"outputDir": "dist/docs/storybook"
