--- a/src/carbon.yml
+++ b/src/carbon.yml
@@ -2,7 +2,7 @@
 library:
   id: carbon-components-angular
   name: Carbon Angular
-  description: Angular implementation of Carbon Components.
+  description: Build user interfaces with Carbon's core components.
   externalDocsUrl: https://angular.carbondesignsystem.com
   inherits: carbon-styles
 assets:
@@ -391,7 +391,7 @@ assets:
     type: component
     platform: web
     framework: angular
-    thumbnailPath: './thumbnails.tooltip-icon.svg'
+    thumbnailPath: './thumbnails/tooltip-icon.svg'
     demoLinks:
       - type: storybook
         name: Storybook
