--- a/src/package.json
+++ b/src/package.json
@@ -13,11 +13,11 @@
   "license": "Apache-2.0",
   "author": "IBM",
   "peerDependencies": {
-    "carbon-components": "^10.0.0"
+    "@carbon/styles": "^1.5.0"
   },
   "dependencies": {
-    "@carbon/icon-helpers": "10.29.0",
-    "@carbon/icons": "11.0.2",
+    "@carbon/icon-helpers": "10.30.0",
+    "@carbon/icons": "11.4.0",
     "@carbon/telemetry": "0.1.0",
     "@carbon/utils-position": "1.1.4",
     "flatpickr": "4.6.1",
