docs: Add story source tab
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,7 @@
 						"styles": [
 							"./.storybook/preview.scss"
 						],
-						"compodoc": true,
+						"compodoc": false,
 						"compodocArgs": [
 							"-e",
 							"json",
