--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "build": "bash scripts/build.sh",
-    "storybook": "ng run carbon-components-angular:storybook",
+    "storybook": "npm run docs:json && start-storybook -p 6006",
     "docs:build": "compodoc -p tsconfig.doc.json -t",
+    "docs:json": "compodoc --config compodoc.storybook.json",
     "lint": "tslint 'src/**/*.ts'",
     "lint:fix": "tslint --fix 'src/**/*.ts'",
     "test": "ng test --no-watch",
     "test:watch": "ng test --watch",
-    "build-storybook": "ng run carbon-components-angular:build-storybook",
+    "build-storybook": "build-storybook -o dist/docs/storybook",
     "semantic-release": "semantic-release",
     "commit": "git-cz",
     "ng": "ng",
