docs: index getting started content
Signed-off-by: Matt Rosno <matt.rosno@ibm.com>

--- a/src/carbon.yml
+++ b/src/carbon.yml
@@ -6,6 +6,8 @@ library:
   externalDocsUrl: https://angular.carbondesignsystem.com
   inherits: carbon-styles
   navData:
+    - title: Get started
+      path: "https://github.com/carbon-design-system/carbon-website/blob/carbon-platform/src/pages/developing/frameworks/angular.mdx"
     - title: Tutorial
       items:
         - title: Overview
