--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -2,9 +2,9 @@ name: Check build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, next ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, next ]
 
 jobs:
   build:
@@ -43,6 +43,8 @@ jobs:
       matrix:
         angular-version: [7, 8, 9, 10, 11, 12, 13, 14]
         node-version: [14.x]
+        exclude:
+          - angular-version: ${{ github.ref == 'refs/heads/next' && '7' || '8' || '9' || '10' || '11' }}
 
     steps:
     - uses: actions/checkout@v2
