Remove deprecated angular versions
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -41,10 +41,8 @@ jobs:
 
     strategy:
       matrix:
-        angular-version: [7, 8, 9, 10, 11, 12, 13, 14]
+        angular-version: [12, 13, 14]
         node-version: [14.x]
-        exclude:
-          - angular-version: ${{ ${GITHUB_REF##*/} == "next" && "7" || "8" || "9" || "10" || "11" }}
 
     steps:
     - uses: actions/checkout@v2
