--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -58,6 +58,6 @@ jobs:
         npm i
         npm i ./../../carbon-components-angular-0.0.0.tgz
         node -v
-        echo "node -v ${node -v}"
+        echo "node -v"
         npm run build -- --configuration production
       working-directory: integration/ng${{ matrix.angular-version }}
