--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.19.0]
+        node-version: [16.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -42,7 +42,7 @@ jobs:
     strategy:
       matrix:
         angular-version: [7, 8, 9, 10, 11, 12, 13, 14]
-        node-version: [14.19.0]
+        node-version: [16.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -57,7 +57,6 @@ jobs:
     - run: |
         npm i
         npm i ./../../carbon-components-angular-0.0.0.tgz
-        node -v
-        echo "node -v"
+        npm run build
         npm run build -- --configuration production
       working-directory: integration/ng${{ matrix.angular-version }}
