--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "tslint --fix 'src/**/*.ts'",
     "test": "ng test --no-watch",
     "test:watch": "ng test --watch",
-    "build-storybook": "npm run carbon-components-angular:build-storybook",
+    "build-storybook": "ng run carbon-components-angular:build-storybook",
     "semantic-release": "semantic-release",
     "commit": "git-cz -s",
     "ng": "ng",
