chore: Remove angular 12 integrations test
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -41,7 +41,7 @@ jobs:
 
     strategy:
       matrix:
-        angular-version: [12, 13, 14]
+        angular-version: [13, 14]
         node-version: [16.x]
 
     steps:
