--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -22,7 +22,8 @@
 		],
 		"types": [
 			"jasmine",
-			"node"
+			"node",
+			"resize-observer-browser"
 		],
 		"paths": {
 			"carbon-components-angular": [
