--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -41,7 +41,7 @@ jobs:
 
     strategy:
       matrix:
-        angular-version: [13, 14, 15]
+        angular-version: [14, 15]
         node-version: [16.x]
 
     steps:
