--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "14.2.11",
     "@angular-devkit/core": "14.2.11",
+    "@angular/animations": "14.3.0",
     "@angular/cli": "14.2.11",
     "@angular/common": "14.3.0",
     "@angular/compiler": "14.3.0",
@@ -85,16 +86,12 @@
     "@commitlint/cli": "17.0.3",
     "@commitlint/config-conventional": "17.0.3",
     "@compodoc/compodoc": "1.1.19",
-    "@storybook/addon-a11y": "6.5.13",
-    "@storybook/addon-actions": "6.5.13",
-    "@storybook/addon-essentials": "6.5.13",
-    "@storybook/addon-links": "6.5.13",
-    "@storybook/addon-storysource": "6.5.13",
-    "@storybook/angular": "6.5.13",
-    "@storybook/builder-webpack5": "6.5.13",
-    "@storybook/manager-webpack5": "6.5.13",
-    "@storybook/source-loader": "6.5.13",
-    "@storybook/theming": "6.5.13",
+    "@storybook/addon-a11y": "7.0.18",
+    "@storybook/addon-actions": "7.0.18",
+    "@storybook/addon-essentials": "7.0.18",
+    "@storybook/addon-links": "7.0.18",
+    "@storybook/angular": "7.0.18",
+    "@storybook/theming": "7.0.18",
     "@types/jasmine": "3.8.0",
     "@types/node": "12.20.55",
     "babel-loader": "8.0.5",
@@ -122,10 +119,13 @@
     "ng-packagr": "14.2.2",
     "postcss": "8.4.14",
     "postcss-loader": "7.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "rxjs": "7.5.0",
     "sass": "1.57.0",
     "sass-loader": "13.2.0",
     "semantic-release": "17.2.3",
+    "storybook": "7.0.18",
     "ts-helpers": "1.1.2",
     "tslint": "6.1.3",
     "typescript": "4.6.4",
