chore: remove '@next' in tag format
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
         "range": "4.x"
       }
     ],
-    "tagFormat": "v${version}@next"
+    "tagFormat": "v${version}"
   },
   "config": {
     "commitizen": {
