test: update carbon-components-angular to latest current version
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/integration/ng14/package.json
+++ b/integration/ng14/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser-dynamic": "~14.0.1",
     "@angular/router": "~14.0.1",
     "@carbon/styles": "^1.5.0",
-    "carbon-components-angular": "latest",
+    "carbon-components-angular": "^5.15.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
