--- a/integration/ng15/package.json
+++ b/integration/ng15/package.json
@@ -18,8 +18,8 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "carbon-components": "^10",
-    "carbon-components-angular": "latest",
+    "@carbon/styles": "^1.5.0",
+    "carbon-components-angular": "^5.15.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
