ci: update add angular 17 to integration test with new lts node
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -41,8 +41,8 @@ jobs:
 
     strategy:
       matrix:
-        angular-version: [14, 15, 16]
-        node-version: [16.x]
+        angular-version: [14, 15, 16, 17]
+        node-version: [20.x]
 
     steps:
     - uses: actions/checkout@v3
