--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@storybook/addon-actions": "7.6.7",
     "@storybook/addon-essentials": "7.6.7",
     "@storybook/addon-links": "7.6.7",
+    "@storybook/addon-storysource": "7.6.7",
     "@storybook/angular": "7.6.7",
     "@storybook/theming": "7.6.7",
     "@types/jasmine": "3.8.0",
