--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,14 @@ indent_size = 4
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.json]
+charset = utf-8
+end_of_file = lf
+indent_style = space
+indent_size = 2
+trim_trailing_whitespace = true
+insert_final_newline = true
+
 [*.yml]
 charset = utf-8
 indent_style = space
