--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
     "@carbon/icons": "11.14.0",
     "@carbon/telemetry": "0.1.0",
     "@carbon/utils-position": "1.1.4",
+    "@floating-ui/dom": "1.6.3",
     "flatpickr": "4.6.13",
     "tslib": "2.3.0"
   }
