--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "@angular/common": "^14.0.0 || ^15.0.0 || ^16.0.0 || ^17.0.0",
     "@angular/core": "^14.0.0 || ^15.0.0 || ^16.0.0 || ^17.0.0",
     "@angular/forms": "^14.0.0 || ^15.0.0 || ^16.0.0 || ^17.0.0",
-    "@carbon/styles": "^1.48.1",
+    "@carbon/styles": "^1.54.0",
     "rxjs": "^6.0.0 || ^7.0.0",
     "zone.js": "^0.11.0"
   },
@@ -85,7 +85,7 @@
     "@angular/platform-browser-dynamic": "14.3.0",
     "@angular/router": "14.3.0",
     "@babel/core": "7.9.6",
-    "@carbon/styles": "1.48.1",
+    "@carbon/styles": "1.54.0",
     "@carbon/themes": "11.24.0",
     "@commitlint/cli": "17.0.3",
     "@commitlint/config-conventional": "17.0.3",
@@ -142,6 +142,7 @@
     "@carbon/icon-helpers": "10.37.0",
     "@carbon/icons": "11.14.0",
     "@carbon/utils-position": "1.1.4",
+    "@floating-ui/dom": "1.6.3",
     "@ibm/telemetry-js": "^1.2.1",
     "flatpickr": "4.6.13",
     "tslib": "2.3.0"
