ci: add a pre-release tag to next branch

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
       },
       {
         "name": "next",
-        "channel": "next"
+        "channel": "next",
+        "prerelease": "rc"
       },
       {
         "name": "v3",
