ci: add next tag
BREAKING CHANGE: upgrade to angular 17

Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "range": "4.x"
       }
     ],
-    "tagFormat": "v${version}"
+    "tagFormat": "v${version}@next"
   },
   "config": {
     "commitizen": {
