ci: remove next tag format as channel already defines it
Signed-off-by: Akshat Patel <akshat@live.ca>

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "range": "4.x"
       }
     ],
-    "tagFormat": "v${version}@next"
+    "tagFormat": "v${version}"
   },
   "config": {
     "commitizen": {
