--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,44 +1,44 @@
 {
-	"compilerOptions": {
-		"baseUrl": ".",
-		"declaration": true,
-		"experimentalDecorators": true,
-		"downlevelIteration": true,
-		"esModuleInterop": true,
-		"importHelpers": true,
-		"lib": [
-			"es2016",
-			"dom"
-		],
-		"sourceMap": true,
-		"inlineSources": true,
-		"module": "esnext",
-		"moduleResolution": "node",
-		"outDir": "./dist-pkg",
-		"rootDir": ".",
-		"target": "es2020",
-		"skipLibCheck": true,
-		"typeRoots": [
-			"./node_modules/@types"
-		],
-		"paths": {
-			"carbon-components-angular/*": [
-				"./src/*/index"
-			]
-		}
-	},
-	"exclude": [
-		"**/*.stories.ts",
-		"**/stories/**",
-		"**/*.spec.ts",
-		"**/node_modules/**",
-		"**/dist/**"
-	],
-	"angularCompilerOptions": {
-		"skipTemplateCodegen": true,
-		"strictMetadataEmit": false,
-		"fullTemplateTypeCheck": false,
-		"enableIvy": true,
-		"compilationMode": "partial"
-	}
+  "compilerOptions": {
+    "baseUrl": ".",
+    "declaration": true,
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "importHelpers": true,
+    "lib": [
+      "es2016",
+      "dom"
+    ],
+    "sourceMap": true,
+    "inlineSources": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "outDir": "./dist-pkg",
+    "rootDir": ".",
+    "target": "ES2022",
+    "skipLibCheck": true,
+    "typeRoots": [
+      "./node_modules/@types"
+    ],
+    "paths": {
+      "carbon-components-angular/*": [
+        "./src/*/index"
+      ]
+    },
+    "useDefineForClassFields": false
+  },
+  "exclude": [
+    "**/*.stories.ts",
+    "**/stories/**",
+    "**/*.spec.ts",
+    "**/node_modules/**",
+    "**/dist/**"
+  ],
+  "angularCompilerOptions": {
+    "skipTemplateCodegen": true,
+    "strictMetadataEmit": false,
+    "fullTemplateTypeCheck": false,
+    "enableIvy": true,
+    "compilationMode": "partial"
+  }
 }
