feat: publish provenance with public access
Signed-off-by: Akshat Patel <38994122+Akshat55@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "url": "git@github.com:carbon-design-system/carbon-components-angular.git"
   },
   "publishConfig": {
-    "provenance": true
+    "provenance": true,
+    "access": "public"
   },
   "license": "Apache-2.0",
   "author": "IBM",
