revert: publish config access
Signed-off-by: Akshat Patel <38994122+Akshat55@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
     "url": "git@github.com:carbon-design-system/carbon-components-angular.git"
   },
   "publishConfig": {
-    "provenance": true,
-    "access": "public"
+    "provenance": true
   },
   "license": "Apache-2.0",
   "author": "IBM",
