fix: add publish config to library (dist) package.json
Signed-off-by: Akshat Patel <38994122+Akshat55@users.noreply.github.com>

--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,9 @@
   "peerDependencies": {
     "@carbon/styles": "^1.54.0"
   },
+  "publishConfig": {
+    "provenance": true
+  },
   "dependencies": {
     "@carbon/icon-helpers": "10.54.0",
     "@carbon/icons": "11.52.0",
