fix: set publish config access to 'public'
Signed-off-by: Akshat Patel <38994122+Akshat55@users.noreply.github.com>

--- a/src/package.json
+++ b/src/package.json
@@ -16,7 +16,8 @@
     "@carbon/styles": "^1.54.0"
   },
   "publishConfig": {
-    "provenance": true
+    "provenance": true,
+    "access": "public"
   },
   "dependencies": {
     "@carbon/icon-helpers": "10.54.0",
