fix: reduce storybook noise by only including stories

--- a/.storybook/tsconfig.json
+++ b/.storybook/tsconfig.json
@@ -7,9 +7,7 @@
 		"allowSyntheticDefaultImports": true,
 	},
 	"include": [
-		"**/*.stories.ts",
-		"../src/**/*",
-		"../projects/**/*"
+		"../**/*.stories.ts",
 	],
-	"exclude": [],
+	"exclude": ["../src/**/*.spec.ts"],
 }
