chore: update babel and core-js

--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "@angular/platform-browser": "18.2.12",
     "@angular/platform-browser-dynamic": "18.2.12",
     "@angular/router": "18.2.12",
-    "@babel/core": "7.9.6",
+    "@babel/core": "^7.28.0",
     "@carbon/styles": "1.70.0",
     "@commitlint/cli": "17.0.3",
     "@commitlint/config-conventional": "17.0.3",
@@ -102,7 +102,7 @@
     "chai": "4.2.0",
     "codelyzer": "6.0.0",
     "commitizen": "4.2.4",
-    "core-js": "2.6.11",
+    "core-js": "^3.44.0",
     "cz-conventional-changelog-components": "1.0.0",
     "element-closest-polyfill": "1.0.0",
     "eslint": "9.16.0",
@@ -138,6 +138,7 @@
   },
   "dependencies": {
     "@carbon/icon-helpers": "10.54.0",
+    "@babel/plugin-transform-class-static-block": "^7.27.1",
     "@carbon/icons": "11.52.0",
     "@carbon/utils-position": "1.1.4",
     "@floating-ui/dom": "1.6.13",
